# conduit

./: .gitignore  Makefile  PROJECT  README.md  flake.nix  go.mod  go.sum
.github/workflows/: lint.yml
api/v1alpha1/: exchange_types.go  exchange_webhook.go  exchange_webhook_test.go  groupversion_info.go  zz_generated.deepcopy.go
client/go/: README.md  client.go  go.mod  message.go
client/python/: README.md  setup.py
client/typescript/: README.md  package.json
cmd/: main.go
config/crd/: kustomization.yaml
config/default/: kustomization.yaml  metrics_service.yaml
config/manager/: manager.yaml
config/manifests/: kustomization.yaml
config/network-policy/: allow-metrics-traffic.yaml
config/prometheus/: monitor.yaml
config/rbac/: exchange_admin_role.yaml  exchange_editor_role.yaml  exchange_viewer_role.yaml  kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml
config/samples/: conduit_v1alpha1_exchange.yaml  conduit_v1alpha1_exchange_advanced.yaml  kustomization.yaml
config/webhook/: manifests.yaml
docs/: docs.go  swagger.json  swagger.yaml
examples/deploy/: nats.yaml
hack/: boilerplate.go.txt
internal/apiserver/: server.go  types.go
internal/controller/: exchange_controller.go  exchange_controller_test.go  suite_test.go
internal/metrics/: collector.go  metrics.go
internal/nats/: client.go  stream.go
internal/pod/: builder.go
sdk/go/: README.md  client.go  config.go  go.mod  go.sum  message.go
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/conduit_sdk/: __init__.py  client.py  config.py  message.py
sdk/python/examples/echo/: Dockerfile  README.md  main.py  requirements.txt
sdk/typescript/: README.md  package.json  tsconfig.json
test/e2e/: e2e_suite_test.go  e2e_test.go
test/utils/: utils.go
(+35 files in other folders)
